@@ -61,17 +61,14 @@ DESCRIPTION
     request URI, and "ATTRIBUTES" for common configuration options that you
     can give as named parameters to the "enable".
 
-    If width or height are defined in the module construction (see
-    "example2.psgi" above), the module will match any URI. Otherwise the
-    match is done against default pattern
-    "*basename*_*width*x*height*-*flags*.*ext*".
+    The default match pattern for URI is
+    "*...**basename*_*width*x*height*-*flags*.*ext*".
 
-    Only *basename*, "x" and *ext* are required. If URI doesn't match, the
-    request is passed through. Any number of flags can be specified,
-    separated with "-". Flags can be boolean (exists or doesn't exist), or
-    have a numerical value. Flag name and value are separated with a
-    zero-width word to number boundary. For example "z20" specifies flag "z"
-    with value 20.
+    If URI doesn't match, the request is passed through. Any number of flags
+    can be specified, separated with "-". Flags can be boolean (exists or
+    doesn't exist), or have a numerical value. Flag name and value are
+    separated with a zero-width word to number boundary. For example "z20"
+    specifies flag "z" with value 20.
 
   basename
     Original image is requested from URI *basename*.*orig_ext*, where
@@ -112,40 +109,20 @@ DESCRIPTION
         /images/foo_40x-crop-z20.png
 
 ATTRIBUTES
-  match_path
+  match
     Only matching URIs are processed with this module. The match is done
     against PATH_INFO. Non-matching requests are delegated to the next
-    middleware layer or application. The value must be a RegexpRef, that
-    returns 3 captures. Default value is:
+    middleware layer or application.
 
-        qr<^(.+)_(.+)\.(png|jpg|jpeg)$>
-
-    First capture is the path and basename of the requested image. The
-    original image will be fetched by "fetch_orig" with this argument. See
-    "call".
-
-    Second capture is the size specification for the requested image. See
-    "match_spec".
-
-    Third capture is the extension for the desired output format. This
-    extension is mapped with Plack::MIME to the Content-Type to be used in
-    the HTTP response. The content type defined the output format used in
-    image processing. Currently only jpeg and png format are supported. See
-    "call".
-
-  match_spec
-    The size specification captured by "match_path" is matched against this.
-    Only matching URIs are processed with this module. The value must be a
-    RegexpRef. Default values is:
-
-        qr<^(\d+)?x(\d+)?(?:-(.+))?$>
+    Must be a RegexpRef, or CodeRef, that may return 3 values (regexp
+    captures or normal return values). The request path is passed to the
+    CodeRef in $_, and can be rewritten during match. This is used to strip
+    off the image parameters from the URI. Rewritten URI is used for
+    fetching the original image.
 
     First and second captures are the desired width and height of the
-    resulting image. Both are optional, but note that the "x" between is
-    required.
-
-    Third capture is an optional flag. This value is parsed in the
-    "image_scale" method during the conversion.
+    resulting image. Third capture is an optional flag string. See
+    "DESCRIPTION".
 
   orig_ext
     ArrayRef of possible original image formats. See "fetch_orig".
@@ -168,10 +145,10 @@ ATTRIBUTES
 METHODS
   call
     Process the request. The original image is fetched from the backend if
-    "match_path" and "match_spec" match as specified. Normally you should
-    use Plack::Middleware::Static or similar backend, that returns a
-    filehandle or otherwise delayed body. Content-Type of the response is
-    set according the request.
+    "path" match as specified. Normally you should use
+    Plack::Middleware::Static or similar backend, that returns a filehandle
+    or otherwise delayed body. Content-Type of the response is set according
+    the request.
 
     The body of the response is replaced with a streaming body that
     implements a content filter to do the actual resizing for the original
@@ -185,8 +162,7 @@ METHODS
     and the conversion happens.
 
   fetch_orig
-    The original image is fetched from the next layer or application. The
-    basename of the request URI, as matched by "match_path", and all
+    The original image is fetched from the next layer or application. All
     possible extensions defined in "orig_ext" are used in order, to search
     for the original image. All other responses except a straight 404 (as
     returned by Plack::Middleware::Static for example) are considered
